# microarr

./: .gitignore  CMakeLists.txt  README.md
include/: microarr.h
lib/: microarr.cpp
test/: test_ind.cpp  test_ops.cpp
